--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
  composer dump-autoload
  composer require mattsmithdev/pdo-crud-for-free=dev-master
 script: 
- composer phpunit
+  phpunit
