--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
 language: php
-php:
-  - '5.6'
-install: 
- composer update
- composer dump-autoload
- composer require mattsmithdev/pdo-crud-for-free=dev-master
-script: 
-  phpunit
+
+install:
+- composer dump-autoload
+- composer require mattsmithdev/pdo-crud-for-free=dev-master
+
+# configure notifications (email, IRC, campfire etc)
+notifications:
+  irc: "irc.freenode.org#yourfavouriteroomfortravis"
